--- a/MySql 工作常见笔记/避免重复添加数据.md
+++ b/MySql 工作常见笔记/避免重复添加数据.md
@@ -8,13 +8,13 @@ INSERT INTO wechat_config_manage(config_key, config_value, enabled, create_time)
 ```
 >上面的```sql```中，如下语句是用于查找数据是否存在：
 ```mysql
-WHERE NOT EXISTS(SELECT config_key FROM wechat_config_manage WHERE config_key = 'SEND_RULE_KEY_test' AND enabled = 1)
+WHERE NOT EXISTS(...);
 ```
 >如不存在，则创建一条临时数据如下```sql```文：
 ```mysql
-SELECT 'SEND_RULE_KEY_test', 'SEND_RULE_KEY_test_value', 1, NOW() FROM DUAL
+SELECT ... FROM DUAL;
 ```
 >这是真正执行插入操作的```sql```文言
 ```mysql
-INSERT INTO wechat_config_manage(config_key, config_value, enabled, create_time)
+INSERT INTO table1 (...);
 ```
