--- a/Java 工作整理收集/生成二维码.md
+++ b/Java 工作整理收集/生成二维码.md
@@ -2,6 +2,7 @@
 ==========
 >生成二维码类库使用的是```com.google.zxing```
 ```java
+
 import com.google.zxing.BarcodeFormat;
 import com.google.zxing.EncodeHintType;
 import com.google.zxing.MultiFormatWriter;
@@ -13,33 +14,35 @@ import javax.servlet.http.HttpServletResponse;
 import java.io.ByteArrayOutputStream;
 import java.util.Map;
 
-/**
- * 生成二维码
- *
- * @param content 二维码内容
- * @param length  长度
- * @return
- */
-@RequestMapping(value = "/QRCode")
-public void barCode(String content, @RequestParam(value = "length", required = false, defaultValue = "200") int length, HttpServletResponse response) {
-    try {
-        String format = "png";// 图像类型
-        Map<EncodeHintType, Object> hints = new HashMap<>();
-        hints.put(EncodeHintType.CHARACTER_SET, "UTF-8");
-        hints.put(EncodeHintType.MARGIN, 0);
-        BitMatrix bitMatrix = new MultiFormatWriter().encode(content,
-                BarcodeFormat.QR_CODE, length, length, hints);// 生成矩阵
-        ByteArrayOutputStream bout = new ByteArrayOutputStream();
-        MatrixToImageWriter.writeToStream(bitMatrix, format, bout);// 输出图像
-        response.setContentType("image/png");
-        ServletOutputStream outputStream = response.getOutputStream();
-        outputStream.write(bout.toByteArray());
-        outputStream.flush();
-        outputStream.close();
-    } catch (Exception e) {
-        e.printStackTrace();
-        logger.error("二维码生成异常", e);
+public class test {
+    
+    /**
+     * 生成二维码
+     *
+     * @param content 二维码内容
+     * @param length  长度
+     * @return
+     */
+    @RequestMapping(value = "/QRCode")
+    public void barCode(String content, @RequestParam(value = "length", required = false, defaultValue = "200") int length, HttpServletResponse response) {
+        try {
+            String format = "png";// 图像类型
+            Map<EncodeHintType, Object> hints = new HashMap<>();
+            hints.put(EncodeHintType.CHARACTER_SET, "UTF-8");
+            hints.put(EncodeHintType.MARGIN, 0);
+            BitMatrix bitMatrix = new MultiFormatWriter().encode(content,
+                    BarcodeFormat.QR_CODE, length, length, hints);// 生成矩阵
+            ByteArrayOutputStream bout = new ByteArrayOutputStream();
+            MatrixToImageWriter.writeToStream(bitMatrix, format, bout);// 输出图像
+            response.setContentType("image/png");
+            ServletOutputStream outputStream = response.getOutputStream();
+            outputStream.write(bout.toByteArray());
+            outputStream.flush();
+            outputStream.close();
+        } catch (Exception e) {
+            e.printStackTrace();
+            logger.error("二维码生成异常", e);
+        }
     }
 }
-
 ```
