避免重复添加数据

--- a/MySql 工作常见笔记/避免重复添加数据.md
+++ b/MySql 工作常见笔记/避免重复添加数据.md
@@ -14,7 +14,7 @@ WHERE NOT EXISTS(...);
 ```mysql
 SELECT ... FROM DUAL;
 ```
->这是真正执行插入操作的```sql```文言
+>这是真正执行插入操作的```sql```文：
 ```mysql
 INSERT INTO table1 (...);
 ```
